--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                   <div class="thumbnail">
                     <a href="javascript:void(0)">
                       <img
-                        src="assets/images/portfolio/portfolio-06.jpg"
+                        src="assets/images/portfolio/projek-07.png"
                         alt="Personal Portfolio Images"
                       />
                     </a>
@@ -707,7 +707,7 @@
                   <div class="content">
                     <div class="category-info">
                       <div class="category-list">
-                        <a href="javascript:void(0)">www.Melpen.git.io</a>
+                        <a href="javascript:void(0)">www.yogimelpen.git.io</a>
                       </div>
                       <div class="meta">
                         <span
