Update My portofolio and Resume

--- a/index.html
+++ b/index.html
@@ -426,9 +426,6 @@
               </div>
             </div>
             <!-- End SIngle Service -->
-
-            <!-- Start Single Service -->
-            <!-- End SIngle Service -->
           </div>
         </div>
       </div>
@@ -510,7 +507,7 @@
                   <div class="thumbnail">
                     <a href="javascript:void(0)">
                       <img
-                        src="assets/images/portfolio/porojek-02.png"
+                        src="assets/images/portfolio/projek-02.png"
                         alt="Personal Portfolio Images"
                       />
                     </a>
@@ -1475,75 +1472,9 @@
       <br />
       <!-- ENd Footer Area -->
 
-      <!-- Modal Portfolio Body area Start -->
-      <div
-        class="modal fade"
-        id="exampleModalCenter"
-        tabindex="-1"
-        role="dialog"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button
-                type="button"
-                class="close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true"><i data-feather="x"></i></span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div class="row align-items-center">
-                <div class="col-lg-6">
-                  <div class="portfolio-popup-thumbnail">
-                    <div class="image">
-                      <img
-                        class="w-100"
-                        src="assets/images/portfolio/portfolio-04.jpg"
-                        alt="slide"
-                      />
-                    </div>
-                  </div>
-                </div>
+    <!-- ===============================================START==================================================== -->>
+<!-- =============================================AND ======================================================== -->>
 
-                <div class="col-lg-6">
-                  <div class="text-content">
-                    <h3>
-                      <span>Featured - Design</span> App Design Development.
-                    </h3>
-                    <p class="mb--30">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Cupiditate distinctio assumenda explicabo veniam
-                      temporibus eligendi.
-                    </p>
-                    <p>
-                      Consectetur adipisicing elit. Cupiditate distinctio
-                      assumenda. dolorum alias suscipit rerum maiores aliquam
-                      earum odit, nihil culpa quas iusto hic minus!
-                    </p>
-                    <div class="button-group mt--20">
-                      <a href="#" class="rn-btn thumbs-icon">
-                        <span>LIKE THIS</span>
-                        <i data-feather="thumbs-up"></i>
-                      </a>
-                      <a href="#" class="rn-btn">
-                        <span>VIEW PROJECT</span>
-                        <i data-feather="chevron-right"></i>
-                      </a>
-                    </div>
-                  </div>
-                  <!-- End of .text-content -->
-                </div>
-              </div>
-              <!-- End of .row Body-->
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- End Modal Portfolio area -->
 
       <!-- Modal Blog Body area Start -->
       <div
