--- a/index.html
+++ b/index.html
@@ -1337,7 +1337,7 @@
                                 <div class="heading">
                                   <div class="title">
                                     <h4>
-                                      Member Proyek ComDev SAGU Foundation
+                                      Com-Dev SAGU Foundation
                                     </h4>
                                     <span>SAGU Foundation</span>
                                   </div>
@@ -1346,13 +1346,34 @@
                                   </div>
                                 </div>
                                 <p class="description">
-                                  SAGU Foundation Institute formed COMDEV to
-                                  organize training activities, web/blong
-                                  website design and online catalog products.
-                                  SAGU Foundation is an NGO based in Jayapura,
-                                  Papua. It was established on January 17, 2015.
-                                  Its service focus is Human Resources
-                                  Development and Research in Papua
+                                  SAGU Foundation formed COM-DEV to organize training activities, web/blong design and product catalogs. In these activities, I was a member of the project.
+                                </p>
+                              </div>
+                            </div>
+                            <!-- End Single List  -->
+
+                            <!-- Start Single List  -->
+                            <div
+                              data-aos="fade-up"
+                              data-aos-duration="500"
+                              data-aos-delay="300"
+                              data-aos-once="true"
+                              class="resume-single-list"
+                            >
+                              <div class="inner">
+                                <div class="heading">
+                                  <div class="title">
+                                    <h4>
+                                      SaCode
+                                    </h4>
+                                    <span>SaCode Community </span>
+                                  </div>
+                                  <div class="date-of-time">
+                                    <span>2024</span>
+                                  </div>
+                                </div>
+                                <p class="description">
+                                  SaCode Community Website Development, SaCode Community is an Information, Communication and Technology (ICT) in Papua.
                                 </p>
                               </div>
                             </div>
@@ -1383,8 +1404,7 @@
                                 <div class="heading">
                                   <div class="title">
                                     <h4>
-                                      Paniai LOCAL Application Creation
-                                      Competition
+                                      GIM-GAME Local Paniai
                                     </h4>
                                     <span
                                       >Paniai Local GIM-GAME Application
@@ -1410,6 +1430,7 @@
                         </div>
                       </div>
                       <!-- End Skill List Area  -->
+                       
                     </div>
                   </div>
                 </div>
@@ -1471,10 +1492,6 @@
       </div>
       <br />
       <!-- ENd Footer Area -->
-
-    <!-- ===============================================START==================================================== -->>
-<!-- =============================================AND ======================================================== -->>
-
 
       <!-- Modal Blog Body area Start -->
       <div
